--- a/ftw/activity/resources/activity.css
+++ b/ftw/activity/resources/activity.css
@@ -6,14 +6,22 @@
   background-color: #EDF6F7;
 }
 
+.activity .event > * {
+  margin-left: 60px;
+}
+
 .activity .event .avatar {
   float: left;
-  margin-right: 1em;
+  margin-left: 0px;
 }
 
 .activity .event .body .title {
   font-weight: bold;
   font-size: 150%;
+}
+
+.activity .event img {
+  border: 1px solid #EEE;
 }
 
 .activity a.more-button {
